updating from video to gif

--- a/t2.md
+++ b/t2.md
@@ -170,11 +170,10 @@ private void SwitchPresenter(object sender, RoutedEventArgs e)
 
 ## Results
 <p align="center">
-    <video width="550" height="550" controls>
-      <source src="Media1.mp4" type="video/mp4">
-    </video>
-</p>
 
+![](Media1%20(1).gif)
+
+</p>
 Just like that, you can see how we can leverage the amazing Windowing features to customize windowing options for your app. Repeat the same step 5 and 6 to implement the Fullscreen and Overlapped (the default) presenters. To learn more about Windowing, see Manage app windows for additional information on what you can do with this feature. 
 
 ## Wrapping up
