--- a/t2.md
+++ b/t2.md
@@ -166,7 +166,7 @@ private void SwitchPresenter(object sender, RoutedEventArgs e)
 <MenuFlyoutItem Text="Compact Overlay" Click="SwitchPresenter"/>
 ```
 
-> **NOTE**: You can save the state of the theme resource and persist the option the user chose at the next time of app startup with three easy steps. Follow this blog post to implement this functionality. 
+> **NOTE**: You can save the state of the theme resource and persist the option the user chose at the next time of app startup with three easy steps. Follow [this blog post](https://github.com/jingwei-a-zhang/test-MDfiles/blob/main/DarkMode.md) to implement this functionality. 
 
 ## Results
 <p align="center">
@@ -177,4 +177,4 @@ private void SwitchPresenter(object sender, RoutedEventArgs e)
 Just like that, you can see how we can leverage the amazing Windowing features to customize windowing options for your app. Repeat the same step 5 and 6 to implement the Fullscreen and Overlapped (the default) presenters. To learn more about Windowing, see Manage app windows for additional information on what you can do with this feature. 
 
 ## Wrapping up
-Next, we will keep evolving the app with app single-instancing. Here is my GitHub for your reference.
+Next, we will keep evolving the app with [app single-instancing](https://github.com/jingwei-a-zhang/test-MDfiles/blob/main/single-instancing.md). This branch covers all the code introduced in this blog.
